// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBar renders 1`] = `
<DocumentFragment>
  <div
    class="button-bar button-bar-medium"
    style="--button-bar-border-color: #d5d5d5; --button-bar-selected-bg: #e5e5e5; --button-bar-hover-bg: #f1f1f1;"
  >
    <a>
      One
    </a>
    <a>
      Two
    </a>
  </div>
</DocumentFragment>
`;

exports[`ButtonBar renders large size 1`] = `
<DocumentFragment>
  <div
    class="button-bar button-bar-large"
    style="--button-bar-border-color: #d5d5d5; --button-bar-selected-bg: #e5e5e5; --button-bar-hover-bg: #f1f1f1;"
  >
    <button>
      One
    </button>
    <button
      data-selected="true"
    >
      Two
    </button>
  </div>
</DocumentFragment>
`;

exports[`ButtonBar renders small size 1`] = `
<DocumentFragment>
  <div
    class="button-bar button-bar-small"
    style="--button-bar-border-color: #d5d5d5; --button-bar-selected-bg: #e5e5e5; --button-bar-hover-bg: #f1f1f1;"
  >
    <button>
      One
    </button>
    <button>
      Two
    </button>
  </div>
</DocumentFragment>
`;
